--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Скрытная ссылка</title>
+<title>IPloggerMaker</title>
 <style>
 body {
 background-color: black;
@@ -60,7 +60,7 @@ font-size: 16px;
 </head>
 <body>
 <div class="container">
-<h1>Трансформация ссылки</h1>
+<h1>IP logger</h1>
 <p>Введите оригинальную ссылку:</p>
 <input type="text" id="originalLink" placeholder="Оригинальная ссылка">
 <br>
